# monkey-coder

./: .clinerules  .dockerignore  .env.example  .env.railway  .env.railway.complete  .env.railway.example  .env.railway.frontend  .env.railway.template  .eslintrc.js  .gitignore  .hintrc  .htmlhintrc  .lintstagedrc.js  .markdownlint.json  .markdownlintignore  .monkey-coder.json.example  .prettierignore  .prettierrc.js  .railway-project-id  .railwayignore  .yarnrc.yml  AGENTS.md  API_TESTING_GUIDE.md  ARCHITECTURE_FIX.md  AUDIT_REPORT.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTH_DEBUG_SUMMARY.md  BACKEND_API_ACCESS.md  BILLING_SETUP.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CLAUDE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_2025_10.md  CLI_COMMAND_STRUCTURE.md  CLI_IMPLEMENTATION_GUIDE.md  CLI_PHASE1_FINAL_SUMMARY.md  CLI_PHASE1_IMPLEMENTATION.md  COMPLETION_ROADMAP.md  (+218 more)
.claude/: settings.json
.devcontainer/: .env.devcontainer  Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh  prometheus.yml  settings.json
.githooks/: pre-commit  pre-commit-model-check
.well-known/: agent.json
artifacts/: model_manifest.json
assets/: finalmonkey (1).txt  finalmonkey.txt  splashmonkey4.txt
benchmarks/: README.md  benchmark_quantum.py
config/: system-limits.config.json
docker/: docker-compose.monitoring.yml
docs/: .gitignore  422-analysis.md  ADVANCED_FEATURES.md  AI_AUTOMATED_WORKFLOWS.md  AUTO_PUBLISHING_SETUP.md  BUILD_IMPROVEMENTS_IMPLEMENTATION.md  BUILD_OUTPUTS_AND_IGNORES.md  CLAUDE.md  CONTINUOUS_PUBLISHING.md  DEPLOYMENT.md  DOCUMENTATION_STRUCTURE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MICROSOFT_AGENT_FRAMEWORK_INTEGRATION.md  MODELS_MANIFEST.md  MODELS_MANIFEST.md.bak  MODEL_COMPLIANCE.md  MODEL_MANIFEST.md  NAVIGATION_BEST_PRACTICES.md  NAVIGATION_MANAGEMENT.md  NEXT_TASKS.md  (+36 more)
(+455 files in other folders)
